--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,14 @@
 cmake_minimum_required(VERSION 3.26)
-project(operating_systems_labs)
+project(lab1)
+project(lab2)
+project(lab3)
+project(lab4)
+project(lab5)
 
 set(CMAKE_CXX_STANDARD 23)
 
-# Закоментуйте рядок, щоб запустити іншу лабораторну роботу
-add_executable(operating_systems_labs
-        lab4/main.cpp
-        lab4/App.h
-        lab4/App.cpp
-        lab4/EventDispatch.cpp
-        lab4/EventDispatch.h
-        lab4/handlers.cpp
-        lab4/handlers.h
-        lab4/Worker.cpp
-        lab4/Worker.h
-        lab4/Event.h
-        lab4/List.h)
-
-# Розкоментуйте рядок, щоб запустити іншу лабораторну роботу
-# add_executable(operating_systems_labs lab1.cpp)
-# add_executable(operating_systems_labs lab2.cpp)
-# add_executable(operating_systems_labs lab3.cpp)
-# add_executable(operating_systems_labs lab5.cpp)
+add_subdirectory(lab1)
+add_subdirectory(lab2)
+add_subdirectory(lab3)
+add_subdirectory(lab4)
+add_subdirectory(lab5)
